--- a/package.json
+++ b/package.json
@@ -2,22 +2,28 @@
 	"name": "kompressor",
 	"version": "1.0.2",
 	"description": "",
-	"main": "src/index.js",
+	"main": "dist/kompressor.min.js",
+	"module": "src/index.js",
 	"scripts": {
 		"build": "webpack"
 	},
 	"author": "sylvester ezenwata",
 	"license": "MIT",
 	"devDependencies": {
-		"@babel/core": "^7.13.10",
+		"@babel/core": "^7.19.1",
 		"@babel/plugin-transform-runtime": "^7.13.10",
-		"@babel/preset-env": "^7.13.10",
+		"@babel/preset-env": "^7.19.1",
 		"@babel/runtime": "^7.13.10",
-		"babel-loader": "^8.2.2",
+		"babel-loader": "^8.2.5",
+		"babel-plugin-add-module-exports": "^1.0.4",
 		"jest": "^27.0.6",
-		"uglifyjs-webpack-plugin": "^2.2.0",
+		"uglifyjs-webpack-plugin": "^1.1.2",
 		"url-loader": "^4.1.1",
-		"webpack": "^5.27.1",
-		"webpack-cli": "^4.5.0"
-	}
+		"webpack": "^5.74.0",
+		"webpack-cli": "^4.10.0"
+	},
+	"browserslist": [
+		"last 4 version",
+		"> 1%"
+	]
 }
